--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h3 class="card__titulo">Otimização Inteligente de Projetos já existentes</h3>
                 <p class="card__texto">Identificamos o problema, coletamos informações relevantes, desenvolvemos alternativas, selecionamos a melhor metodologia para a otimização dos seus processos, implementamos, e acompanhamos o seu Projeto.</p>
             </div>
-            <div class="card">
+            <div class="card card3">
                 <a href=""><img src="./img/image-7.jpg" alt="" class="card__img"></a>
                 <p class="card__sub">Projetos</p>
                 <h3 class="card__titulo">Gestão de Projetos da sua empresa e ou setor</h3>
