--- a/index.html
+++ b/index.html
@@ -16,6 +16,40 @@
             <a href="" class="menu__links">Nossos trabalhos</a>
         </nav>
     </header>
+    <section class="banner">
+        <div class="slider">
+            <div class="slides">
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <input type="radio" name="radio-btn" id="radio3">
+                <input type="radio" name="radio-btn" id="radio4">
+                <div class="div slide first">
+                    <img src="./img/teste.jpg" alt="">
+                </div>
+                <div class="div slide">
+                    <img src="../img/teste.jpg" alt="">
+                </div>
+                <div class="div slide">
+                    <img src="../img/teste.jpg" alt="">
+                </div>
+                <div class="div slide">
+                    <img src="../img/teste.jpg" alt="">
+                </div>
+                <div class="navigation-auto">
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+                    <div class="auto-btn3"></div>
+                    <div class="auto-btn4"></div>
+                </div>
+            </div>
+            <div class="manual-navigation">
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio2" class="manual-btn"></label>
+                <label for="radio3" class="manual-btn"></label>
+                <label for="radio4" class="manual-btn"></label>
+            </div>
+        </div>
+    </section>
     <section class="projetos">
         <div class="titulos">
             <h4 class="titulo-gestao">Gestão de projetos</h4>
@@ -45,7 +79,7 @@
     <footer class="footer">
         <div class="footer-posi">
             <div class="redes">
-                <img src="./img/logopm2.jpg" alt="Logo PM" class="logo-footer">
+                <img src="./img/logopm.jpg" alt="Logo PM" class="logo-footer">
                 <ul class="redes-sociais">
                    <li><a href="" class="redes__links"> <img src="./img/facebook.png" alt="" class="redes__img"> </a></li>
                    <li><a href="" class="redes__links"> <img src="./img/instagram.png" alt="" class="redes__img"> </a></li>
@@ -60,5 +94,6 @@
            </div>
         </div>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 </html>
