--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     <img src="./img/teste.jpg" alt="">
                 </div>
                 <div class="div slide">
-                    <img src="../img/teste.jpg" alt="">
+                    <img src="./img/teste.jpg" alt="">
                 </div>
                 <div class="div slide">
-                    <img src="../img/teste.jpg" alt="">
+                    <img src="./img/teste.jpg" alt="">
                 </div>
                 <div class="div slide">
-                    <img src="../img/teste.jpg" alt="">
+                    <img src="./img/teste.jpg" alt="">
                 </div>
                 <div class="navigation-auto">
                     <div class="auto-btn1"></div>
